--- a/tp-songs/01_folk/Jarek_Nohavica____Píseň_zhrzelého_trampa.tex
+++ b/tp-songs/01_folk/Jarek_Nohavica____Píseň_zhrzelého_trampa.tex
@@ -3,21 +3,14 @@
 \zp{Píseň zhrzelého trampa}{Jarek Nohavica}
 
 \zs
-\Ch{C}{Poněvadž} nemám \Ch{G}{kanady}
-
-a \Ch{F}{neznám} písně \Ch{C}{z pamp}
-
+\Ch{C}{Poněvadž} nemám \Ch{G}{kanady} a \Ch{F}{neznám} písně \Ch{C}{z pamp},
 \Ch{F}{ho}, ho, \Ch{C}{ho} -- \Ch{G7}{neznám} písně z \Ch{C}{pamp} \Ch{G7}{}
-\ks
 
-\zs
-Vyloučili mě z osady, že prý jsem houby tramp
+Vyloučili mě z osady, že prý jsem houby tramp...
 
-Ho, ho, ho -- že prý jsem houby tramp
+Napsali si do cancáků, jen ať to každej ví...
 
-Napsali si do cancáků, jen ať to každej ví,
-
-vyloučený z řad čundráků, ten frajer libový
+Vyloučený z řad čundráků, ten frajer libový...
 \ks
 
 \zr
@@ -41,24 +34,28 @@ a všem \Ch{D7}{šerifům} jsem říkal, ba \Ch{G}{ne}, pane\Ch{G7}{}
 \kr
 
 \zs
-Povídal mi frajer Džou, jen žádný legrácky
+Povídal mi frajer Džou, jen žádný legrácky...
 
-jinak schytneš na bendžo, čestný čundrácky
+jinak schytneš na bendžo, čestný čundrácky...
 
-A prý se můžu vrátit zpět až dám se do cajku
+A prý se můžu vrátit zpět až dám se do cajku...
 
-A odříkám jim naspamět akordy na vlajku
+A odříkám jim nazpamět akordy na vlajku...
 \ks
+
+\zr \kr
 
 \zs
-A tak teď chodím po světe a mám zaracha
+A tak teď chodím po světe a mám zaracha...
 
-Na vandr chodím k Markétě a dávám si bacha
+Na vandr chodím k Markétě a dávám si bacha...
 
-Dokud se trampské úřady nepoučí z chyb
+Dokud se trampské úřady nepoučí z chyb...
 
-Zpívám si to svý nevadí a zase bude líp
+Zpívám si to svý nevadí a zase bude líp...
 \ks
+
+\zr \kr
 
 \kp
 
