--- a/tp-songs/01_folk/Jarek_Nohavica____Zatímco_se_koupeš.tex
+++ b/tp-songs/01_folk/Jarek_Nohavica____Zatímco_se_koupeš.tex
@@ -43,7 +43,7 @@ všechny peníze dal bych za odvahu.
 \ks
 
 \zr
-\Ch{Emi}{zatím}\Ch{A7}{co }se \Ch{D}{koupeš}, \Ch{Emi}{zatím}\Ch{A7}{co }se \Ch{D}{koupeš}...
+Hm \Ch{Emi}{hm, }\Ch{A7}{nebylo a} \Ch{D}{není}, hm \Ch{Emi}{hm, } \Ch{A7}{zatím co }se \Ch{D}{koupeš}...
 \kr
 
 \kp
