removing some chords on some easy songs
reshufling songs to be same as setlist

--- a/tp-songs/01_folk/Zuzana_Navarová___Sedávám_na_domovních_schodech.tex
+++ b/tp-songs/01_folk/Zuzana_Navarová___Sedávám_na_domovních_schodech.tex
@@ -3,13 +3,13 @@
 \zp{Sedávám na domovních schodech}{Karel Plíhal}
 
 \zs
-\Ch{Bmaj}{Sedává}\Ch{Hdim}{m} \Ch{Cm7}{na domovních} \Ch{F}{schodech} 
+\Ch{C}{Sedá}\Ch{C#dim}{vám} \Ch{Dm7}{na domovních} \Ch{G7}{schodech} 
 
-\Ch{Bmaj}{zpívává}\Ch{Hdim}{m }\Ch{Cm7}{v krásných cizích} \Ch{F}{slovech}  
+\Ch{C}{zpívá}\Ch{C#dim}{vám} \Ch{Dm7}{v krásných cizích} \Ch{G7}{slovech}  
 
-\Ch{Bmaj}{kterým} \Ch{A6}{jenom} sa\Ch{G6#}{ma rozu}\Ch{D9}{mím} 
+\Ch{C7}{kterým} jenom \Ch{H6}{sama} \Ch{B7}{rozu}\Ch{A7}{mím} 
 
-\Ch{C9}{z komínu} \Ch{F6}{stoupá dý}\Ch{Bmaj}{, }\Ch{Fm}{} 
+\Ch{D9}{z komínu} \Ch{G7}{stoupá} \Ch{C6}{dým}\Ch{G7}{~} 
 \ks
 
 \zs
@@ -23,17 +23,13 @@ z komínu stoupá dým
 \ks
 
 \zr
-\Ch{D9}{Všechna hnízda šla už spát} 
+\Ch{E7}{Všechna hnízda šla už spát}  je \Ch{E7}{nutno myslet} \Ch{E7}{na návrat} 
 
-je nutno myslet na návrat 
+\Ch{Am}{večerní} \Ch{E7}{zvony} \Ch{Am}{znějí} 
 
-\Ch{Gm7}{večer}\Ch{D9#}{ní } \Ch{D9}{zvony} \Ch{Gmadd9}{} \Ch{Gm}{znějí} 
+\Ch{D7}{Zvolna nota za notou} \Ch{D9}{kráčí svojí} \Ch{D7}{samotou}
 
-\Ch{C9}{Zvolna nota za notou}
-
-kráčí svojí samotou 
-
-\Ch{F9}{jako černou závějí}
+\Ch{F9}{jako černou} \Ch{D9}{závě}\Ch{G7}{jí}
 \kr
 
 \zs
@@ -60,11 +56,11 @@ zpívávám pomalu a líně
 
 neznámá blues hlasem zastřeným 
 
-\Ch{Cm7}{z komínu} \Ch{F}{stoupá} dým\Ch{B6}{, } ~ \Ch{A6}{, } ~ \Ch{G6#}{, } ~ \Ch{G6}{}
+\Ch{D9}{z komínu} \Ch{G7}{stoupá} \Ch{C}{dým} \Ch{A7}{~}
  
-\Ch{Cm7}{z komínu} \Ch{F}{stoupá} dým\Ch{F9}{, } ~ \Ch{E9}{, } ~ \Ch{Es9}{, } ~ \Ch{D9}{}
+\Ch{D9}{z komínu} \Ch{G7}{stoupá} \Ch{C}{dým} \Ch{A7}{~}
  
-\Ch{Cm7}{z komínu}\Ch{F}{, } ~ \Ch{B9}{stoupá dým}
+\Ch{D9}{z komínu} \Ch{G7}{stoupá} \Ch{C}{dým}
 \ks
 
 \kp
