--- a/tp-songs/03_zahranicni/Billy_Haley___Rock_Around_the_Clock.tex
+++ b/tp-songs/03_zahranicni/Billy_Haley___Rock_Around_the_Clock.tex
@@ -9,7 +9,7 @@
 
 \Ch{E}{Nine, ten, eleven o'clock, twelve o'clock, rock}
 
-We're gonna \Ch{B7}{rock around the clock tonight.}
+We're gonna \Ch{H7}{rock around the clock tonight.}
 \ks
 
 \zs
@@ -22,7 +22,7 @@ We're gonna \Ch{A7}{rock around the clock tonight,}
 
 we're gonna rock, \Ch{E}{rock, rock, 'til broad daylight.}
 
-We're gonna \Ch{B7}{rock, gonna rock,} \Ch{A7}{around the clock} \Ch{E}{tonight.}
+We're gonna \Ch{H7}{rock, gonna rock,} \Ch{A7}{around the clock} \Ch{E}{tonight.}
 \ks
 
 \zs
@@ -30,11 +30,7 @@ When the clock strikes two, three and four,
 
 if the band slows down we'll yell for more
 
-We're gonna rock around the clock tonight,
-
-we're gonna rock, rock, rock, 'til broad daylight.
-
-We're gonna rock, gonna rock, around the clock tonight.
+...
 \ks
 
 \zs
@@ -46,11 +42,7 @@ When the chimes ring five, six and seven,
 
 we'll be right in seventh heaven.
 
-We're gonna rock around the clock tonight,
-
-we're gonna rock, rock, rock, 'til broad daylight.
-
-We're gonna rock, gonna rock, around the clock tonight.
+...
 \ks
 
 \zs
@@ -58,11 +50,7 @@ When it's eight, nine, ten, eleven too,
 
 I'll be goin' strong and so will you.
 
-We're gonna rock around the clock tonight,
-
-we're gonna rock, rock, rock, 'til broad daylight.
-
-We're gonna rock, gonna rock, around the clock tonight.
+...
 \ks
 \zs
 solo
@@ -73,11 +61,7 @@ When the clock strikes twelve, we'll cool off then,
 
 start a rockin' round the clock again.
 
-We're gonna rock around the clock tonight,
-
-we're gonna rock, rock, rock, 'til broad daylight.
-
-We're gonna rock, gonna rock, around the clock tonight.
+...
 \ks
 
 \kp
