--- a/tp-songs/03_zahranicni/Steve_Miller_Band___Joker.tex
+++ b/tp-songs/03_zahranicni/Steve_Miller_Band___Joker.tex
@@ -5,11 +5,11 @@ Intro: //:\Ch{F}{} ~ \Ch{B}{} ~ \Ch{C}{} ~ \Ch{B}{} ://
 \zs
 \Ch{F}{Some} \Ch{B}{people} call me the space \Ch{C}{cowboy}, yeah~\Ch{B}{} ~ \Ch{F}{}
 
-\Ch{F}{Some} \Ch{B}{call} me the gangster of \Ch{C}{love} ~~~~\Ch{B}{} ~ \Ch{F}{}
+Some call me the gangster of love
 
-\Ch{F}{Some} \Ch{B}{people} call me Ma\Ch{C}{urice} ~~~~\Ch{B}{}
+Some people call me Maurice
 
-Cause I \Ch{F}{speak} of the \Ch{B}{pompitous} of \Ch{C}{love} ~~~~\Ch{B}{} ~ \Ch{F}{}
+Cause I speak of the pompitous of love
 \ks
 \zs
 People talk about me, baby. 
@@ -22,14 +22,14 @@ Cause I'm right here, right here, right here, right here at home
 \ks
 \zr
 
-Cause I'm a \Ch{F}{picker}, I'm a \Ch{B}{grinner}, I'm a \Ch{C}{lover}, and I'm a \Ch{B}{sinner} ~~~~ \Ch{F}{}
+Cause I'm a picker, I'm a grinner, I'm a lover, and I'm a sinner
 
-I play my \Ch{B}{music} in the \Ch{C}{sun} ~~~~ \Ch{B}{}
+I play my music in the sun
 \bigskip
 
-I'm a \Ch{F}{joker}, I'm a \Ch{B}{smoker} I'm a \Ch{C}{midnight} \Ch{B}{toker}
+I'm a joker, I'm a smoker I'm a midnight toker
 
-\Ch{F}{I} sure don't \Ch{B}{want} to hurt no \Ch{C}  {one} ~~~ \Ch{B}{}
+I sure don't want to hurt no one
 \kr
 
 \zs
@@ -49,21 +49,10 @@ I get my lovin' on the run
 \zr\kr
 
 \zs
-People keep talking about me baby.
-
-They say I'm doin' you wrong
-
-Well don't you worry, don't worry, no don't worry mama
-
-Cause I'm right here at home
+= 2
 \ks
+
 \zs
-You're the cutest thing I ever did see
-
-Really love your peaches want to shake your tree
-
-Lovey-dovey, lovey-dovey, lovey-dovey all the time
-
-Come on baby and I'll show you a good time
+= 3
 \ks
 \kp
