--- a/tp-songs/03_zahranicni/Ray_Charles____Hit_the_road_Jack.tex
+++ b/tp-songs/03_zahranicni/Ray_Charles____Hit_the_road_Jack.tex
@@ -4,20 +4,20 @@
 \zr
 Hit the \Ch{Ami}{road} \Ch{G}{Jack,} \Ch{F}{don}'t you come \Ch{E7}{back}
 
-\Ch{Ami}{No more,} \Ch{G}{no more,} \Ch{F}{no more,} \Ch{E7}{no more}
+No more, no more, no more, no more
 
-Hit the \Ch{Ami}{road} \Ch{G}{Jack} and\Ch{F}{ don}'t you come \Ch{E7}{back} no \Ch{Ami}{more} \Ch{G}{ } \Ch{F}{ } \Ch{E7}{ }
+Hit the road Jack and don't you come back no more
 
 \kr
 \zs
 
-Old \Ch{Ami}{woman}, old \Ch{G}{woman}, don't \Ch{F}{treat} me so \Ch{E7}{mean}
+Old woman, old woman, don't treat me so mean
 
-You're the \Ch{Ami}{meanest} \Ch{G}{woman} I've \Ch{F}{ever} \Ch{E7}{seen}
+You're the meanest woman I've ever seen
 
-I \Ch{Ami}{guess} if \Ch{G}{you} \Ch{F}{say} \Ch{E7}{so}
+I guess if you say so
 
-I'll \Ch{Ami}{have} to \Ch{G}{pack} my \Ch{F}{things} and \Ch{E7}{go}
+I'll have to pack my things and go
 
 \ks
 \zr
