Added new songs

--- a/tp-songs/03_zahranicni/Meredith_Brooks___Bitch.tex
+++ b/tp-songs/03_zahranicni/Meredith_Brooks___Bitch.tex
@@ -21,7 +21,7 @@ I'm a little bit of everything all rolled into one
 \ks
 
 \zr
-I'm a \Ch{A}{bitch I'm} a lover I'm a child I'm a mother
+I'm a \Ch{A}{bitch I'm} a lover I'm a \Ch{E}{child I'm a mother}
 
 I'm a \Ch{Bm}{sinner} I'm a saint \Ch{D}{I do not feel ashamed}
 
