Added a new TP zpevnik.

--- a/tp-songs/03_zahranicni/Elvis___Blue_Suede_Shoes.tex
+++ b/tp-songs/03_zahranicni/Elvis___Blue_Suede_Shoes.tex
@@ -1,4 +1,4 @@
-\zp{Hound Dog}{Elvis}
+\zp{Blue Suade shoes}{Elvis}
 
 \zs
 Well it's one for the money,  two for the show
@@ -22,8 +22,6 @@ But uh uh honey lay off of them shoes
 And don't you, step on my blue suede shoes
 
 You can do anything but lay off of my blue suede shoes
-
-(let's go cat!)
 \ks
 
 \zs
@@ -42,8 +40,6 @@ But uh uh honey lay off of my shoes
 And don't you, step on my blue suede shoes
 
 You can do anything but lay off of my blue suede shoes
-
-(rock it!)
 \ks
 
 \zs
@@ -51,13 +47,7 @@ You can do anything but lay off of my blue suede shoes
 \ks
 
 \zs
-Well it's one for the money,  two for the show
-
-Three to get ready now go go go
-
-But don't you, step on my blue suede shoes
-
-Well you can do anything but lay off of my blue suede shoes
+= 1.
 \ks
 
 \zs
