--- a/tp-songs/03_zahranicni/Natalie_Imbruglia___Torn.tex
+++ b/tp-songs/03_zahranicni/Natalie_Imbruglia___Torn.tex
@@ -25,19 +25,19 @@ Intro:
 
                  \Ch{C}{Nothing's fine}
 
-                 \Ch{F}{I'm torn}
+                 I'm \Ch{F}{torn}
 \ks
 
 \zr
-             \Ch{F}{I'm all out of faith,} \Ch{C}{this is how I} \Ch{Dm}{feel}
+             \Ch{F}{I'm all out of} \Ch{C}{faith, this is how I} \Ch{Dm}{feel}
 
-             I'm cold and \Ch{Bb}{I am shamed,} lying \Ch{F}{naked on the floor}
+             I'm cold and \Ch{Bb}{I am shamed,} lying naked on the \Ch{F}{floor}
 
-             Illusion never \Ch{C}{changed, into} some\Ch{Dm}{thing real}
+             Illusion never \Ch{C}{changed, into} something \Ch{Dm}{real}
 
-             I'm wide awake \Ch{Bb}{and I can see,} the per\Ch{F}{fect sky is torn}
+             I'm wide awake \Ch{Bb}{and I can see,} the perfect sky is \Ch{F}{torn}
 
-             You're a little \Ch{C}{late,} I'm alrea\Ch{Dm}{dy torn} \Ch{Bb}{}
+             You're a little \Ch{C}{late,} I'm already \Ch{Dm}{torn} \Ch{Bb}{}
 \kr
 
 \zs
