adding a new songs

--- a/tp-songs/01_folk/Zuzana_Navarová___Sedávám_na_domovních_schodech.tex
+++ b/tp-songs/01_folk/Zuzana_Navarová___Sedávám_na_domovních_schodech.tex
@@ -25,7 +25,7 @@ z komínu stoupá dým
 \zr
 \Ch{E7}{Všechna hnízda šla už spát}  je \Ch{E7}{nutno myslet} \Ch{E7}{na návrat} 
 
-\Ch{Am}{večerní} \Ch{E7}{zvony} \Ch{Am}{znějí} 
+\Ch{Am}{večer}\Ch{E7}{ní zvony} \Ch{Am}{znějí} 
 
 \Ch{D7}{Zvolna nota za notou} \Ch{D9}{kráčí svojí} \Ch{D7}{samotou}
 
