--- a/tp-songs/03_zahranicni/Meredith_Brooks___Bitch.tex
+++ b/tp-songs/03_zahranicni/Meredith_Brooks___Bitch.tex
@@ -9,7 +9,7 @@ I \Ch{A}{hate the world today.}\Ch{E}{~}\Ch{D}{} You're so good to me I \Ch{A}{k
 
 Tried to tell you but you \Ch{F#m}{look at me like maybe}
 
-I'm and \Ch{Bm}{angel} underneath \Ch{D}{innocent and sweet}
+I'm and \Ch{B7}{angel} underneath \Ch{D}{innocent and sweet}
  \ks
 
 \zs
