--- a/tp-songs/03_zahranicni/Natalie_Imbruglia___Torn.tex
+++ b/tp-songs/03_zahranicni/Natalie_Imbruglia___Torn.tex
@@ -66,18 +66,23 @@ Bridge: (bass only)
 
            \Ch{Dm}{Ooooh}...  Hoo \Ch{F}{ooooh}...  \Ch{C}{Ooooh}
 \zs
-                 There's nothing where he used to lie
+                 \Ch{Dm}{There's nothing where he used to lie}
 
-                 My inspiration has run dry
+                 \Ch{C}{My conversation has run dry}
 
-                 That's what's going on
+                 \Ch{Am}{That's what's going on}
 
-                 Nothing's right
+                 \Ch{C}{Nothing's fine}
 
-            I'm torn
+                 I'm \Ch{F}{torn}
 \ks
 
 \zr
+\kr
+             …….….Toooooooooorn................
+
+\zr
+(solo)
 \kr
 
 \kp
