Fixnuti bugu s chybejicimi interprety
closes #2

--- a/tpcb/songbook.sty
+++ b/tpcb/songbook.sty
@@ -442,14 +442,14 @@
   \ifSamepageMode%
     \begin{samepage}%
   \fi%
-  \begin{center}
+   \begin{center}
     \STitle[]{\theSongTitle}{#3}\\
-    \vspace{-.5ex}
-    %\CpyRt[N]{#4}{#7}\\
-    \vspace{-.5ex}
-    \WAndM[N]{#5}\\
+    \vspace{.5ex}
+    {\small #6}\\
+    %\vspace{-.5ex}
+    %\WAndM[N]{#5}\\
   \end{center}%
-  \vspace{\SpaceAfterTitleBlk}
+ \vspace{\SpaceAfterTitleBlk}
   %\ifCompactSongMode
   %  \begin{multicols*}{2}
   %    \raggedcolumns
