Začlenění Pepových úprav do aktuální verze

--- a/tp-songs/03_zahranicni/Ben_E_King___Stand_By_Me.tex
+++ b/tp-songs/03_zahranicni/Ben_E_King___Stand_By_Me.tex
@@ -2,7 +2,9 @@
 
 \zp{Stand by Me}{Ben E King}
 
-| \Ch{A}{~} | ~ |  \Ch{F#m}{~} | ~ |  \Ch{D}{~} |  \Ch{E}{~} |  \Ch{A}{~} | ~ |
+\ifdefined\TPBAND
+	| \Ch{A}{~} | ~ |  \Ch{F#m}{~} | ~ |  \Ch{D}{~} |  \Ch{E}{~} |  \Ch{A}{~} | ~ |
+\fi
 
 \zs
 When the night has come
