--- a/tp-songs/03_zahranicni/Gershwin___Summertime.tex
+++ b/tp-songs/03_zahranicni/Gershwin___Summertime.tex
@@ -22,24 +22,27 @@ But till that morning,  there's nothin' can harm you
 With daddy and mammy standing by
 \ks
 
-A moll
-\begin{table}[h]
-\begin{tabular}{|ll|ll|ll|ll|}
-\Ch{Am}{~} & \Ch{E7}{~}   & \Ch{Am}{~}   & \Ch{E7}{~}          & \Ch{Am}{~} & \Ch{E7}{~} & \Ch{Am}{~} & \Ch{E7}{~}  \Ch{Am}{~}\\
-\Ch{Dm}{~} &                   & \Ch{Dm7}{~} & \Ch{D#dim7}{~} & \Ch{E}{~}     &                 & \Ch{E}{~}     & \Ch{E7}{~}  \\
-\Ch{Am}{~} & \Ch{E7}{~}   & \Ch{Am}{~}   & \Ch{E7}{~}          & \Ch{Am}{~} & \Ch{E7}{~} & \Ch{Am}{~} & \Ch{E7}{~} \Ch{Am}{~} \\
-\Ch{C}{~}    & \Ch{Dm}{~} & \Ch{E7}{~}     &                          & \Ch{Am}{~} & \Ch{E7}{~} & \Ch{Am}{~} & \Ch{E7}{~}  \\
-\end{tabular}
-\end{table}
-
-H moll
-\begin{table}[h]
-\begin{tabular}{|ll|ll|ll|ll|}
-\Ch{Hm}{~} & \Ch{F#7}{~}   & \Ch{Hm}{~}   & \Ch{F#7}{~}          & \Ch{Hm}{~} & \Ch{F#7}{~} & \Ch{Hm}{~} & \Ch{F#7}{~}  \Ch{Hm}{~}\\
-\Ch{Em}{~} &                      & \Ch{Em7}{~} & \Ch{Fdim7}{~}       & \Ch{F#}{~}   &                   & \Ch{F#}{~}   & \Ch{F#7}{~}  \\
-\Ch{Hm}{~} & \Ch{F#7}{~}   & \Ch{Hm}{~}   & \Ch{F#7}{~}          & \Ch{Hm}{~} & \Ch{F#7}{~} & \Ch{Hm}{~} & \Ch{F#7}{~} \Ch{Hm}{~} \\
-\Ch{D}{~}    & \Ch{Em}{~}    & \Ch{F#7}{~}     &                          & \Ch{Hm}{~} & \Ch{F#7}{~} & \Ch{Hm}{~} & \Ch{F#7}{~}  \\
-\end{tabular}
-\end{table}
+\ifdefined\TPBAND
+	
+	A moll
+	\begin{table}[h]
+	\begin{tabular}{|ll|ll|ll|ll|}
+\Ch{Am}{~} & \Ch{E7}{~}   & \Ch{Am}{~}   & \Ch{E7}{~}          & \Ch{Am}{~} & \Ch{E7}{~} & \Ch{Am}{~} & \Ch{E7}{~}  \Ch{Am}{~}	\\
+\Ch{Dm}{~} &                   & \Ch{Dm7}{~} & \Ch{D#dim7}{~} & \Ch{E}{~}     &                 & \Ch{E}{~}     & \Ch{E7}{~}  	\\
+\Ch{Am}{~} & \Ch{E7}{~}   & \Ch{Am}{~}   & \Ch{E7}{~}          & \Ch{Am}{~} & \Ch{E7}{~} & \Ch{Am}{~} & \Ch{E7}{~} \Ch{Am}{~} 	\\
+	\Ch{C}{~}    & \Ch{Dm}{~} & \Ch{E7}{~}     &                          & \Ch{Am}{~} & \Ch{E7}{~} & \Ch{Am}{~} & \Ch{E7}{~}  \\
+	\end{tabular}
+	\end{table}
+	
+	H moll
+	\begin{table}[h]
+	\begin{tabular}{|ll|ll|ll|ll|}
+\Ch{Hm}{~} & \Ch{F#7}{~}   & \Ch{Hm}{~}   & \Ch{F#7}{~}          & \Ch{Hm}{~} & \Ch{F#7}{~} & \Ch{Hm}{~} & \Ch{F#7}{~}  \Ch{Hm	}{~}\\
+\Ch{Em}{~} &                      & \Ch{Em7}{~} & \Ch{Fdim7}{~}       & \Ch{F#}{~}   &                   & \Ch{F#}{~}   & \Ch{	F#7}{~}  \\
+\Ch{Hm}{~} & \Ch{F#7}{~}   & \Ch{Hm}{~}   & \Ch{F#7}{~}          & \Ch{Hm}{~} & \Ch{F#7}{~} & \Ch{Hm}{~} & \Ch{F#7}{~} \Ch{Hm}	{~} \\
+\Ch{D}{~}    & \Ch{Em}{~}    & \Ch{F#7}{~}     &                          & \Ch{Hm}{~} & \Ch{F#7}{~} & \Ch{Hm}{~} & \Ch{F#7}{~	}  \\
+	\end{tabular}
+	\end{table}
+\fi
 
 \kp
