--- a/tp-songs/03_zahranicni/Mungo_Jerry___Summertime.tex
+++ b/tp-songs/03_zahranicni/Mungo_Jerry___Summertime.tex
@@ -2,8 +2,11 @@
 
 \zp{Summertime}{Mungo Jerry}
 
-Intro:  
-| E – E | E – E | A – A | E – E | B – A | E – E | 
+\ifdefined\TPBAND
+
+	Intro:  
+	| E – E | E – E | A – A | E – E | B – A | E – E | 
+\fi
 
 \zs
 In the \Ch{E}{summertime} when the weather is high,
@@ -53,9 +56,10 @@ Da da da da ,
 da da da da da da da da da da da da 
 \ks
 
-piano solo 
-| E – E | E – E | A – A | E – E | B – A | E – E | 
-
+\ifdefined\TPBAND
+	piano solo 
+	| E – E | E – E | A – A | E – E | B – A | E – E | 
+\fi
 
 \zs
 When the winter's here, yeah, it's party-time, 
