--- a/tp-songs/03_zahranicni/Suzanne_Vega___Caramel.tex
+++ b/tp-songs/03_zahranicni/Suzanne_Vega___Caramel.tex
@@ -2,6 +2,7 @@
 
 \zp{Caramel}{Suzanne Vega}
 
+\ifdefined\TPBAND
 CHORDS
 
 \begin{tabular}{ l r }
@@ -16,6 +17,7 @@ CHORDS
   G        &  355433\\
   Gm       &  355333\\
 \end{tabular}
+\fi
 
 4x (\Ch{Gm7}{I~~}N~~\Ch{Eb5}{T~~}R~~\Ch{D7}{O})
 
@@ -43,7 +45,9 @@ what I'd for\Ch{D7sus4/A}{give} of myself\Ch{D7}{~}
 if you don't \Ch{Gm7}{go.} ~\Ch{D7}{}
 \kr
 
+\ifdefined\TPBAND
 \zs (SÓLÍČKO PRO ŠIKOVNÉ PRSTÍČKY)\ks
+\fi
 
 \zs
 So goodbye, ~~~~~ sweet appetite,
