--- a/tp-songs/04_tp/Johnny___On_hledá_ji.tex
+++ b/tp-songs/04_tp/Johnny___On_hledá_ji.tex
@@ -1,6 +1,6 @@
 % -*-coding: utf-8 -*-
 
-\zp{On hleda ji}{Johnny}
+\zp{On hledá ji}{Johnny}
 
 \zs
 \Ch{C}{Jmenuji se Jan,} \Ch{F}{je mi dvacet pět,} \Ch{G}{jsem celkem pohled}\Ch{C}{ný} \Ch{F}{~} ~ \Ch{G}{~}
