--- a/tp-songs/01_folk/Jarek_Nohavica____Básnířka.tex
+++ b/tp-songs/01_folk/Jarek_Nohavica____Básnířka.tex
@@ -1,62 +1,76 @@
 % -*-coding: utf-8 -*-
 
 \zp{Básnířka}{Jarek Nohavica}
-  \zs
-    \Ch{G}{Mladičká} \Ch{D}{bás}nířka \Ch{C}{s} korálky \Ch{D}{nad} kotní\Ch{G}{ky} \Ch{D}{} \Ch{C}{} \Ch{D}{}
-    \Ch{G}{bouchala} \Ch{D}{na} dvířka \Ch{C}{paláce} \Ch{D}{poe}tiky \Ch{Emi}{}  (\Ch{G}{ba}\Ch{B}{ss}\Ch{C}{a)}
+\zs
+\Ch{G}{Mladičká} \Ch{D}{bás}nířka s \Ch{C}{korálky} \Ch{D}{nad} kotní\Ch{G}{ky} \Ch{D}{} \Ch{C}{} \Ch{D}{}
 
-    S někým se \Ch{C}{vyspa}\Ch{G}{la}, někomu \Ch{C}{ned}\Ch{G}{ala},
-    láska jako \Ch{D}{hobby} (\Ch{E}{ba}\Ch{F#}{ssa)}
+\Ch{G}{bouchala} \Ch{D}{na} dvířka \Ch{C}{paláce} \Ch{D}{poe}ti\Ch{Emi}{ky.}
+\ifdefined\TPBAND
+(\Ch{G}{ba}\Ch{B}{ss}\Ch{C}{a)}
+\fi
 
-    \Ch{G}{Pak} o tom \Ch{D}{nap}sala \Ch{C}{sonetu} na \Ch{D}{čtyř}i \Ch{G}{doby}  \Ch{D}{} \Ch{C}{} \Ch{D}{}
-  \ks
-  \zs
-    Svoje srdce skloňovala podle vzoru Ferlinghetti,
-    ve vzduchu nechávala viset vždy jen půlku věty
+\Ch{G}{S někým} se \Ch{C}{vyspa}\Ch{G}{la}, někomu \Ch{C}{neda}\Ch{G}{la},
+láska jako \Ch{D}{hobby,}
+\ifdefined\TPBAND
+(\Ch{E}{ba}\Ch{F#}{ssa)}
+\fi
 
-    Plná tragiky, plná mystiky,
-    plná splínu
+\Ch{G}{pak} o tom \Ch{D}{nap}sala \Ch{C}{sonetu} na \Ch{D}{čtyř}i 
+\Ch{G}{doby.}  \Ch{D}{} \Ch{C}{} \Ch{D}{}
+\ks
+\zs
+Svoje srdce skloňovala podle vzoru Ferlinghetti,
 
-    Tak jí to otiskli v jednom magazínu
-  \ks
-  \zs
-    Bývala viděna v malém baru u Rozhlasu,
-    od sebe kolena a cizí ruka kolem pasu
+ve vzduchu nechávala viset vždy jen půlku věty.
 
-    Trochu se napila, trochu se opila,
-    na účet redaktora
+Plná tragiky, plná mystiky,
+plná splínu,
 
-    Za týden na to byla hvězdou mikrofóra
-  \ks
-  \zs
-    Pod paží nosila rozepsané rukopisy,
-    ráno se budila vedle záchodové mísy
+tak jí to otiskli v jednom magazínu.
+\ks
+\zs
+Bývala viděna v malém baru u Rozhlasu,
 
-    Múzou políbena, životem potřísněná,
-    plná zázraků
+od sebe kolena a cizí ruka kolem pasu.
 
-    A pak ji vyhodili z gymplu i z baráku
-  \ks
-  \zs
-    Šly řeči okolím, že měla něco se esenbáky,
-    ať bylo cokoliv, přestala věřit na zázraky
+Trochu se napila, trochu se opila
+na účet redaktora,
 
-    Cítila u srdce, jak po ní přešla,
-    železná bota
+za týden na to byla hvězdou mikrofóra.
+\ks
+\zs
+Pod paží nosila rozepsané rukopisy,
 
-    Tak o tom napsala sonet ze života
-  \ks
-  \zs
-    Pak jednou v pondělí, přišla na koncert na koleje,
-    a hlasem pokorným prosila o text Darmoděje
+ráno se budila vedle záchodové mísy.
 
-    Péro vzala, pak se dala,
-    tichounce do pláče
+Múzou políbená, životem potřísněná,
+plná zázraků
 
-    /: A její slzy kapaly na její mrkváče :/
-  \ks
+a pak ji vyhodili z gymplu i z baráku.
+\ks
+\zs
+Šly řeči okolím, že měla něco se esenbáky,
+
+ať bylo cokoliv, přestala věřit na zázraky.
+
+Cítila u srdce, jak po ní přešla
+železná bota,
+
+tak o tom napsala sonet ze života.
+\ks
+\zs
+Pak jednou v pondělí, přišla na koncert na koleje
+
+a hlasem pokorným prosila o text Darmoděje.
+
+Pero si vzala a pak se dala,
+tichounce do pláče
+
+/: a její slzy kapaly na její mrkváče. :/
+\ks
 \kp
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+
+
+
