--- a/tp-songs/02_pop_rock/Petr_Hapka____Šaškové_počmáraní.tex
+++ b/tp-songs/02_pop_rock/Petr_Hapka____Šaškové_počmáraní.tex
@@ -62,22 +62,23 @@
     co bude až tady nebude, dojemně pitomá show.
 \ks
 
-
-Basa:
-
-| C G H F |
-
-| D A G H |
-
-| D A G H |
-
-| D G C G | 
-
-\zr
-| F F | f  f | C H B A |
-
-| F F | f  e | d\# d |
-\kr
+\ifdefined\TPBAND
+    Basa:
+    
+    | C G H F |
+    
+    | D A G H |
+    
+    | D A G H |
+    
+    | D G C G | 
+    
+    \zr
+    | F F | f  f | C H B A |
+    
+    | F F | f  e | d\# d |
+    \kr
+\fi
 
 \kp
 
