Samson Lenk -> Samson a jeho parta, velká písmena v názvech anglických písniček

--- a/tp-songs/01_folk/Samson_a_jeho_parta____Katce.tex
+++ b/tp-songs/01_folk/Samson_a_jeho_parta____Katce.tex
@@ -1,6 +1,6 @@
 % -*-coding: utf-8 -*-
 
-\zp{Katce}{Samson Lenk}
+\zp{Katce}{Samson a jeho parta}
 
 \zs
 \Ch{D9}{Chtěl} bych králem \Ch{Dmaj7/C}{být} \Ch{D9/C}{aspoň} chvíli \Ch{Dmaj7/C}{krátkou,} 
