--- a/tp-songs/01_folk/Samson_a_jeho_parta____Pohoda.tex
+++ b/tp-songs/01_folk/Samson_a_jeho_parta____Pohoda.tex
@@ -1,6 +1,6 @@
 % -*-coding: utf-8 -*-
 
-\zp{Pohoda}{Samson Lenk}
+\zp{Pohoda}{Samson a jeho parta}
 
 \zs
 U nás v \Ch{C}{ulici} bydlel pan \Ch{Emi7}{Svoboda}, 
