--- a/tp-songs/01_folk/Samson_a_jeho_parta____Už_to_nenapravím.tex
+++ b/tp-songs/01_folk/Samson_a_jeho_parta____Už_to_nenapravím.tex
@@ -1,6 +1,6 @@
 % -*-coding: utf-8 -*-
 
-\zp{Už to nenapravím}{Jaroslav Samson Lenk}
+\zp{Už to nenapravím}{Samson a jeho parta}
 
 \zr
 \Ch{Ami}{Vap} ta da ta ta da tada ta tadada... \Ch{D}{}  \Ch{F}{} \Ch{E}{} \Ch{Ami}{} \Ch{E}{} \Ch{E7}{}
