--- a/tp-songs/03_zahranicni/Alanis_Morisette____Hand_in_my_pocket.tex
+++ b/tp-songs/03_zahranicni/Alanis_Morisette____Hand_in_my_pocket.tex
@@ -1,6 +1,6 @@
 % -*-coding: utf-8 -*-
 
-\zp{Hand in my Pocket}{Alanis Morisette}
+\zp{Hand in my pocket}{Alanis Morisette}
 
 \zs
 I'm \Ch{A}{broke} but I'm \Ch{Asus2}{happy,}
