--- a/tp-songs/03_zahranicni/Beatles___Oh_darling.tex
+++ b/tp-songs/03_zahranicni/Beatles___Oh_darling.tex
@@ -1,6 +1,6 @@
 % -*-coding: utf-8 -*-
 
-\zp{Oh Darling}{Beatles}
+\zp{Oh darling}{Beatles}
 
 \zs
 \Ch{F}{Oh} \Ch{A}{Ddarling please be}\Ch{E}{lieve me} 
