--- a/tp-songs/03_zahranicni/Beatles____All_my_loving.tex
+++ b/tp-songs/03_zahranicni/Beatles____All_my_loving.tex
@@ -1,6 +1,6 @@
 % -*-coding: utf-8 -*-
 
-\zp{All My Loving}{Beatles}
+\zp{All my loving}{Beatles}
 
 \zs
 Close your \Ch{F#mi}{eyes} and I'll \Ch{H7}{kiss} you
