--- a/tp-songs/03_zahranicni/Beatles____Let_it_be.tex
+++ b/tp-songs/03_zahranicni/Beatles____Let_it_be.tex
@@ -1,6 +1,6 @@
 % -*-coding: utf-8 -*-
 
-\zp{Let It Be}{Beatles}
+\zp{Let it be}{Beatles}
 
 \zs
 \Ch{G}{When} I find myself in \Ch{D}{times} of trouble,
