--- a/tp-songs/03_zahranicni/Beatles____Norwegian_wood.tex
+++ b/tp-songs/03_zahranicni/Beatles____Norwegian_wood.tex
@@ -1,6 +1,6 @@
 % -*-coding: utf-8 -*-
 
-\zp{Norwegian Wood}{Beatles}
+\zp{Norwegian wood}{Beatles}
 \zs
 \Ch{D}{I on}ce had a girl or should I say, \Ch{C}{she o}nce \Ch{G}{had} \Ch{D}{me}
 
