--- a/tp-songs/03_zahranicni/Beatles____Yellow_submarine.tex
+++ b/tp-songs/03_zahranicni/Beatles____Yellow_submarine.tex
@@ -1,6 +1,6 @@
 % -*-coding: utf-8 -*-
 
-\zp{Yellow Submarine}{Beatles}
+\zp{Yellow submarine}{Beatles}
 
 \zs
 \Ch{G}{In} the \Ch{D}{town} where \Ch{C}{I was} \Ch{G}{born}
