--- a/tp-songs/03_zahranicni/Ben_E_King___Stand_By_Me.tex
+++ b/tp-songs/03_zahranicni/Ben_E_King___Stand_By_Me.tex
@@ -1,6 +1,6 @@
 % -*-coding: utf-8 -*-
 
-\zp{Stand by Me}{Ben E King}
+\zp{Stand by me}{Ben E King}
 
 \ifdefined\TPBAND
 	| \Ch{A}{~} | ~ |  \Ch{F#m}{~} | ~ |  \Ch{D}{~} |  \Ch{E}{~} |  \Ch{A}{~} | ~ |
