--- a/tp-songs/03_zahranicni/Billy_Haley___Rock_Around_the_Clock.tex
+++ b/tp-songs/03_zahranicni/Billy_Haley___Rock_Around_the_Clock.tex
@@ -1,6 +1,6 @@
 % -*-coding: utf-8 -*-
 
-\zp{Rock Around the Clock}{Bill Haley and the Comets}
+\zp{Rock around the clock}{Bill Haley and the Comets}
 
 \zs 
 \Ch{E}{One, two, three o'clock, four o'clock, rock}
