--- a/tp-songs/03_zahranicni/Bob_Dylan____Knockin_on_heavens_door.tex
+++ b/tp-songs/03_zahranicni/Bob_Dylan____Knockin_on_heavens_door.tex
@@ -1,6 +1,6 @@
 % -*-coding: utf-8 -*-
 
-\zp{Knockin' on Heaven's Door}{Bob Dylan}
+\zp{Knockin' on heaven's door}{Bob Dylan}
 
 \zs
 \Ch{G}{Ma}ma, \Ch{D}{take} this badge off of \Ch{Ami}{me} \Ch{Ami7}
