--- a/tp-songs/03_zahranicni/Bobby_McFerring___Dont_Worry_Be_Happy.tex
+++ b/tp-songs/03_zahranicni/Bobby_McFerring___Dont_Worry_Be_Happy.tex
@@ -1,6 +1,6 @@
 % -*-coding: utf-8 -*-
 
-\zp{Don't Worry Be Happy}{Bobby McFerrin}
+\zp{Don't worry, be happy}{Bobby McFerrin}
 
 \zs 
 Here's a little song I wrote 
