--- a/tp-songs/03_zahranicni/Deep_Purple____Smoke_on_the_water.tex
+++ b/tp-songs/03_zahranicni/Deep_Purple____Smoke_on_the_water.tex
@@ -1,6 +1,6 @@
 % -*-coding: utf-8 -*-
 
-\zp{Smoke on the Water}{Deep Purple}
+\zp{Smoke on the water}{Deep Purple}
 
 \zr
 8× /: \Ch{G}{} \Ch{B}{} \Ch{C}{} \Ch{G}{} \Ch{B}{} \Ch{C#}{} \Ch{C}{} \Ch{G}{} 
