--- a/tp-songs/03_zahranicni/Israel_Kamakawiwoole____Somewhere_over_the_rainbow.tex
+++ b/tp-songs/03_zahranicni/Israel_Kamakawiwoole____Somewhere_over_the_rainbow.tex
@@ -1,6 +1,6 @@
 % -*-coding: utf-8 -*-
 
-\zp{Somewhere over the Rainbow}{Israel Kamakawiwo'ole}
+\zp{Somewhere over the rainbow}{Israel Kamakawiwo'ole}
 
 \zs
 
