--- a/tp-songs/03_zahranicni/Limp_Bizkit____Behind_blue_eyes.tex
+++ b/tp-songs/03_zahranicni/Limp_Bizkit____Behind_blue_eyes.tex
@@ -1,6 +1,6 @@
 % -*-coding: utf-8 -*-
 
-\zp{Behind Blue Eyes}{Limp Bizkit}
+\zp{Behind blue eyes}{Limp Bizkit}
 
 \zs
 \Ch{Emi}{No one} knows what it's \Ch{G}{like}
