--- a/tp-songs/03_zahranicni/Lynyrd_Skynyrd____Sweet_home_Alabama.tex
+++ b/tp-songs/03_zahranicni/Lynyrd_Skynyrd____Sweet_home_Alabama.tex
@@ -1,6 +1,6 @@
 % -*-coding: utf-8 -*-
 
-\zp{Sweet Home Alabama}{Lynyrd Skynyrd}
+\zp{Sweet home Alabama}{Lynyrd Skynyrd}
 
 \zs
 \Ch{D}{Big} whee\Ch{Cmaj7}{ls keep} on tu\Ch{G}{rning}.
