--- a/tp-songs/03_zahranicni/Mamas__Papas____California_dreaming.tex
+++ b/tp-songs/03_zahranicni/Mamas__Papas____California_dreaming.tex
@@ -1,6 +1,6 @@
 % -*-coding: utf-8 -*-
 
-\zp{California Dreaming}{Mamas \& Papas}
+\zp{California dreaming}{Mamas \& Papas}
 \zs
 All {the} leaves are \Ch{Ami}{brown} (all the \Ch{G}{leaves} are \Ch{F}{brown})
 
