--- a/tp-songs/03_zahranicni/Nick_Cave___Where_the_Wild_Roses_Grow.tex
+++ b/tp-songs/03_zahranicni/Nick_Cave___Where_the_Wild_Roses_Grow.tex
@@ -1,4 +1,4 @@
-\zp{Where the Wild Roses Grow}{Leonard Cohen and Nick Cave}
+\zp{Where the wild roses grow}{Leonard Cohen and Nick Cave}
 
 \zr
 They \Ch{Em}{call} me The Wild \Ch{Am}{Rose} \Ch{Em}{but} my \Ch{G}{name} was Elisa \Ch{B}{Day}
