--- a/tp-songs/03_zahranicni/Peggy_Lee___Good_Day.tex
+++ b/tp-songs/03_zahranicni/Peggy_Lee___Good_Day.tex
@@ -1,6 +1,6 @@
 % -*-coding: utf-8 -*-
 
-\zp{Good Day}{Peggy Lee}
+\zp{Good day}{Peggy Lee}
 \zs
 \Ch{G7}{Yes, it's} a \Ch{C}{good} day for singin' a song,
 
