--- a/tp-songs/03_zahranicni/Ping___Fucking_Perfect.tex
+++ b/tp-songs/03_zahranicni/Ping___Fucking_Perfect.tex
@@ -1,6 +1,6 @@
 % -*-coding: utf-8 -*-
 
-\zp{Fuking Perfect}{Pink}
+\zp{Fuking perfect}{Pink}
 
 \zs
  Made a \Ch{G}{wrong} turn, once \Ch{Dsus}{or twice}. Dug my \Ch{Em7}{way} out, blood and \Ch{Cadd9}{fire}
