--- a/tp-songs/03_zahranicni/Pink_Floyd____Another_brick_in_the_wall.tex
+++ b/tp-songs/03_zahranicni/Pink_Floyd____Another_brick_in_the_wall.tex
@@ -1,6 +1,6 @@
 % -*-coding: utf-8 -*-
 
-\zp{Another Brick in the Wall}{Pink Floyd}
+\zp{Another brick in the wall}{Pink Floyd}
 
 \zs
 \Ch{Dmi}{We do}n’t need no education
