--- a/tp-songs/03_zahranicni/Pink_Floyd____Shine_on_your_crazy_diamond.tex
+++ b/tp-songs/03_zahranicni/Pink_Floyd____Shine_on_your_crazy_diamond.tex
@@ -1,6 +1,6 @@
 % -*-coding: utf-8 -*-
 
-\zp{Shine on You Crazy Diamond}{Pink Floyd}
+\zp{Shine on you crazy diamond}{Pink Floyd}
 
 \zs
 \Ch{Gmi}{Remember} when you were young,
