--- a/tp-songs/03_zahranicni/Pink_Floyd____Wish_you_were_here.tex
+++ b/tp-songs/03_zahranicni/Pink_Floyd____Wish_you_were_here.tex
@@ -1,6 +1,6 @@
 % -*-coding: utf-8 -*-
 
-\zp{Wish You Were Here}{Pink Floyd}
+\zp{Wish you were here}{Pink Floyd}
 /: \Ch{G}{} \Ch{Emi7}{} \Ch{G}{} :/  \Ch{Emi7}{} \Ch{A}{} \Ch{Emi7}{} \Ch{A}{}  \Ch{G}{}
 
 \zs
