--- a/tp-songs/03_zahranicni/Ritchie_Valens____La_Bamba.tex
+++ b/tp-songs/03_zahranicni/Ritchie_Valens____La_Bamba.tex
@@ -1,6 +1,6 @@
 % -*-coding: utf-8 -*-
 
-\zp{La Bamba}{Ritchie Valens}
+\zp{La bamba}{Ritchie Valens}
 \zs
 Para bailar la \Ch{C}{Bamba,}\Ch{F}{ } \Ch{G}{ }
 
