--- a/tp-songs/03_zahranicni/Tokens____Lion_Sleeps_Tonight.tex
+++ b/tp-songs/03_zahranicni/Tokens____Lion_Sleeps_Tonight.tex
@@ -1,6 +1,6 @@
 % -*-coding: utf-8 -*-
 
-\zp{Lion Sleeps Tonight}{Tokens}
+\zp{Lion sleeps tonight}{Tokens}
 \zs
 Wee wee ooh wimoweh,
 wee wee ooh wimoweh.
