--- a/tp-songs/03_zahranicni/Ray_Charles____Hit_the_road_Jack.tex
+++ b/tp-songs/03_zahranicni/Ray_Charles____Hit_the_road_Jack.tex
@@ -1,6 +1,6 @@
 % -*-coding: utf-8 -*-
 
-\zp{Hit the Road, Jack}{Ray Charles}
+\zp{Hit the road, Jack}{Ray Charles}
 \zr
 Hit the \Ch{Ami}{road,} \Ch{G}{Jack,} \Ch{F}{don}'t you come \Ch{E7}{back}
 
