Sjednocení stylu nových písniček

--- a/tp-songs/01_folk/Argema____Jarošovský_pivovar.tex
+++ b/tp-songs/01_folk/Argema____Jarošovský_pivovar.tex
@@ -3,9 +3,9 @@
 \zp{Jarošovský pivovar}{Argema}
 
 \zs
-\Ch{E}{Léta} tam \Ch{H}{stál}, \Ch{A}{stojí} tam \Ch{E}{dál,}
+\Ch{E}{Léta} tam \Ch{H}{stál,} \Ch{A}{stojí} tam \Ch{E}{dál,}
 
-pivovar \Ch{H}{u ces}ty, \Ch{A}{každý} ho \Ch{H}{znal.}
+pivovar \Ch{H}{u cesty,} \Ch{A}{každý} ho \Ch{H}{znal.}
 
 \Ch{E}{Léta} tam \Ch{H}{stál}, \Ch{A}{stát} bude \Ch{E}{dál,}
 
@@ -27,7 +27,7 @@ Bída a hlad, kolem šel strach,
 
 když bylo piva dost, mohl ses smát.
 
-Třista let stál, stát bude dál,
+Tři sta let stál, stát bude dál,
 
 ten, kdo zná Jarošov, zná pivovar.
 \ks
