--- a/tp-songs/01_folk/Bratři_Ebenové____Folklóreček.tex
+++ b/tp-songs/01_folk/Bratři_Ebenové____Folklóreček.tex
@@ -17,7 +17,7 @@ takhle tu pisničku máme hned hotovú.
 \zr
 \Ch{A}{Nejvíc} mě ten folkloreček {do}{jí}\Ch{C}{má,}
 
-\Ch{G}{když} se hraje \Ch{Emi}{elekt}ricky, \Ch{G}{elektricky} s \Ch{Emi}{bi-}\Ch{A}{cí}-\Ch{D}{ma}.
+\Ch{G}{když} se hraje \Ch{Emi}{elektricky,} \Ch{G}{elektricky} s \Ch{Emi}{bi-}\Ch{A}{cí}-\Ch{D}{ma}.
 \kr
 
 \zs
