--- a/tp-songs/01_folk/Brontosauři____Franky_Dlouhán.tex
+++ b/tp-songs/01_folk/Brontosauři____Franky_Dlouhán.tex
@@ -3,10 +3,10 @@
 \zp{Franky Dlouhán}{Brontosauři}
 
 \zs
-\Ch{C}{Kol}ik je smutného,
-když \Ch{F}{mra}ky černé \Ch{C}{jdou}
+\Ch{C}{Kolik} je smutného,
+když \Ch{F}{mraky} černé \Ch{C}{jdou}
 
-lidem nad \Ch{G}{hlav}ou, \Ch{F}{smu}tnou dála\Ch{C}{vou}.
+lidem nad \Ch{G}{hlavou,} \Ch{F}{smu}tnou dála\Ch{C}{vou.}
 
 Já slyšel příběh, který velkou pravdu měl,
 
@@ -16,16 +16,16 @@ za čas odletěl, každý zapomněl.
 \zr
 \Ch{C}{Měl} kapsu \Ch{G}{prázdnou} Franky Dlouhán,
 
-po Státech \Ch{F}{tou}lal se jen \Ch{C}{sám}
+po Státech \Ch{F}{toulal} se jen \Ch{C}{sám}
 
-a že byl \Ch{F}{ves}elej, tak \Ch{C}{kaž}dej měl ho \Ch{G7}{rád}.
+a že byl \Ch{F}{veselej,} tak \Ch{C}{každej} měl ho \Ch{G7}{rád}.
 
 Tam ruce k \Ch{F}{dílu} mlčky přiloží
 a \Ch{C}{zase}
 jede \Ch{Ami}{dál.}
 
 A \Ch{F}{kaž}dej, kdo s ním
-\Ch{G}{chvil}ku byl, tak \Ch{F}{dlou}ho \Ch{G7}{se pak} \Ch{C}{smál}.
+\Ch{G}{chvilku} byl, tak \Ch{F}{dlou}ho \Ch{G7}{se pak} \Ch{C}{smál}.
 \kr
 
 \zs
