--- a/tp-songs/01_folk/Brontosauři____Na_kameni_kámen.tex
+++ b/tp-songs/01_folk/Brontosauři____Na_kameni_kámen.tex
@@ -29,12 +29,7 @@ Přes všechna slova co z nich jdou, hrabou pro kuličku svou, jen pro tu svou.
 \zs
 Možná jen se mi to zdá a po těžký noci přijde, přijde hezký ráno.
 
-Jaký bude nevím sám, taky jsem si zvyk na všechno kolem nás.
+Jaký bude, nevím sám, taky jsem si zvyk' na všechno kolem nás.
 \ks
 
 \kp
-
-
-
-
-
