--- a/tp-songs/01_folk/Fleret____Zafúkané.tex
+++ b/tp-songs/01_folk/Fleret____Zafúkané.tex
@@ -13,7 +13,7 @@
 
 \Ch{C}{idu} k tvej \Ch{G}{dědině} zatúla\Ch{C}{nej},
 
-\Ch{F}{cestičky} sně\Ch{C}{hem} sú \Ch{E}{zafúkané}. \Ch{Ami}{} \Ch{F7maj}{} 
+\Ch{F}{cestičky} sně\Ch{C}{hem} sú \Ch{E}{zafúkané}. \Ch{Ami}{} \Ch{Fmaj7}{} 
 \Ch{Ami}{} \Ch{E4sus}{}
 \ks
 
