--- a/tp-songs/01_folk/Karel_Kryl____Morituri_te_salutant.tex
+++ b/tp-songs/01_folk/Karel_Kryl____Morituri_te_salutant.tex
@@ -9,7 +9,7 @@ Cesta je \Ch{Ami}{prach} a \Ch{G}{šterk} a \Ch{Dmi}{udu}saná \Ch{Ami}{hlína}
 
 /: a z hvězdných \Ch{Dmi}{drah} má \Ch{G}{šperk,} co \Ch{C}{kamením} se \Ch{E}{spíná,}
 
-\Ch{Ami}{a pírka} \Ch{G}{touhy} z \Ch{Em}{křídel} pega\Ch{Ami}{sů.} :/
+\Ch{Ami}{a pírka} \Ch{G}{touhy} z \Ch{Emi}{křídel} pega\Ch{Ami}{sů.} :/
 \ks
 
 \zs
