--- a/tp-songs/01_folk/Karel_Kryl____Zkouška_dospělosti.tex
+++ b/tp-songs/01_folk/Karel_Kryl____Zkouška_dospělosti.tex
@@ -33,9 +33,9 @@ dozrál čas pro častušky a vstupu do milicí.
 \ks
 
 \zs
-Dozrál čas dilematu: \uv{Být pro anebo proti?}
+Dozrál čas dilematu, být pro anebo proti,
 
-Pak čekat na výplatu, jak jiní patrioti.
+pak čekat na výplatu, jak jiní patrioti.
 \ks
 
 \zr Opilí... \kr
