--- a/tp-songs/02_pop_rock/Jiří_Suchý____Zlatý_slunce_nad_hlavou.tex
+++ b/tp-songs/02_pop_rock/Jiří_Suchý____Zlatý_slunce_nad_hlavou.tex
@@ -42,7 +42,7 @@ a \Ch{D}{pravdu} s vínem \Ch{D7}{pít,}
 zdravit \Ch{C}{máky} vlčí,
 co kve\Ch{Cmi}{tou a mlčí,}
 
-a pak \Ch{C}{smát} se, \Ch{Cmaj}{zpívat} a \Ch{C}{žííííí}íít ~~ \Ch{H}{} \Ch{B}{} 
+a pak \Ch{C}{smát} se, \Ch{Cmaj7}{zpívat} a \Ch{C}{žííííí}íít ~~ \Ch{H}{} \Ch{B}{} 
 \kr
 
 \zr
