--- a/tp-songs/02_pop_rock/Richard_Müller____Nebude_to_ľahké.tex
+++ b/tp-songs/02_pop_rock/Richard_Müller____Nebude_to_ľahké.tex
@@ -6,7 +6,7 @@
 \Ch{Ami}{} \Ch{G}{} \Ch{Ami}{} \Ch{G}{}
 
 \zs
-\Ch{Ami}{Vraj} zmenila si \Ch{G}{číslo} \Ch{Ami}{a do} zámku \Ch{G}{nepasuje} viac môj \Ch{F7maj}{kľúč.} \Ch{F}{}
+\Ch{Ami}{Vraj} zmenila si \Ch{G}{číslo} \Ch{Ami}{a do} zámku \Ch{G}{nepasuje} viac môj \Ch{Fmaj7}{kľúč.} \Ch{F}{}
 
 \Ch{Ami}{Hlavou} mi \Ch{G}{blysklo}, \Ch{Ami}{asi chceš,} \Ch{G}{aby} som bol už \Ch{Fmaj7}{fuč.}
 \ks
