--- a/tp-songs/03_zahranicni/Israel_Kamakawiwoole____Somewhere_over_the_rainbow.tex
+++ b/tp-songs/03_zahranicni/Israel_Kamakawiwoole____Somewhere_over_the_rainbow.tex
@@ -15,11 +15,12 @@ And the dreams that you dream of, dreams really do come true
 \ks
 \zr
 
-Some\Ch{C}{day} I'll wish upon a star, \Ch{G}{wake} up where the clouds are far be\Ch{Am}{hind}\Ch{F}{ me}
+Some\Ch{C}{day} I'll wish upon a star,
+\Ch{G}{wake} up where the clouds are far be\Ch{Ami}{hind} \Ch{F}{me}
 
 Where\Ch{C}{ trouble} melts like lemon drops
 
-\Ch{G}{High} above the chimney tops is \Ch{Ami}{where} you'll\Ch{F}{ find} me
+\Ch{G}{High} above the chimney tops is \Ch{Ami}{where} you'll \Ch{F}{find} me
 \kr
 \zs
 Somewhere over the rainbow bluebirds fly
