--- a/tp-songs/03_zahranicni/Leonard_Cohen____Hallelujah.tex
+++ b/tp-songs/03_zahranicni/Leonard_Cohen____Hallelujah.tex
@@ -2,24 +2,24 @@
 
 \zp{Hallelujah}{Leonard Cohen}
 
-\Ch{C}{}  \Ch{Am}{}  \Ch{C}{}  \Ch{Am}{}
+\Ch{C}{}  \Ch{Ami}{}  \Ch{C}{}  \Ch{Ami}{}
 
 \zs
-Now I've \Ch{C}{heard} there was a \Ch{Am}{secret} chord
+Now I've \Ch{C}{heard} there was a \Ch{Ami}{secret} chord
 
-That \Ch{C}{David} played to \Ch{Am}{please} the Lord
+That \Ch{C}{David} played to \Ch{Ami}{please} the Lord
 
 But \Ch{F}{you} don't really \Ch{G}{care} for music, \Ch{C}{do} you? \Ch{G}{}
 
 It \Ch{C}{goes} like this, the \Ch{F}{fourth}, the \Ch{G}{fifth}
 
-The \Ch{Am}{minor} fall, the \Ch{F}{major} lift
+The \Ch{Ami}{minor} fall, the \Ch{F}{major} lift
 
 The \Ch{G}{baffled} king com\Ch{E}{posing}, Halle\Ch{Dmi}{lujah}
 \ks
 
 \zr
-Halle\Ch{F}{lujah}, Halle\Ch{Am}{lujah}, Halle\Ch{F}{lujah}
+Halle\Ch{F}{lujah}, Halle\Ch{Ami}{lujah}, Halle\Ch{F}{lujah}
 
 Halle\Ch{C}{lu} \Ch{G}{--} \Ch{C}{jah}  \Ch{G}{}
 \kr
