--- a/tp-songs/03_zahranicni/Pink_Floyd____Shine_on_your_crazy_diamond.tex
+++ b/tp-songs/03_zahranicni/Pink_Floyd____Shine_on_your_crazy_diamond.tex
@@ -16,9 +16,9 @@
 You were \Ch{Gmi}{caught} in the crossfire
 \Ch{Gmmaj7/F#}{of childhood} and stardom
 
-\Ch{Gm7/F}{Blown} on the steel \Ch{C9}{breeze}
+\Ch{Gmi7/F}{Blown} on the steel \Ch{C9}{breeze}
 
-\Ch{Es}{Come} on you target for \Ch{Edimi}{faraway} laughter
+\Ch{Es}{Come} on you target for \Ch{Edim}{faraway} laughter
 
 \Ch{B/F}{Come} on you stranger, you \Ch{Dmi}{legend}, you \Ch{D7}{martyr}, and \Ch{Gmi}{shine}!
 \ks
