--- a/tp-songs/03_zahranicni/neznámý____Bella_Ciao.tex
+++ b/tp-songs/03_zahranicni/neznámý____Bella_Ciao.tex
@@ -5,7 +5,7 @@
 \zs
 \Ch{Ami}{Una mattina} mi sono svegliato,
 
-o bella, ciao! bella, ciao! bella, ciao, ciao, ciao!
+o bella, ciao! Bella, ciao! Bella, ciao, ciao, ciao!
 
 Una mat\Ch{Dmi}{tina mi} sono sve\Ch{Ami}{gliato,}
 
@@ -15,7 +15,7 @@ e ho tro\Ch{E}{vato l'inva}\Ch{Ami}{sor.}
 \zs
 O partigiano, portami via,
 
-o bella, ciao! bella, ciao! bella, ciao, ciao, ciao!
+o bella, ciao! Bella, ciao! Bella, ciao, ciao, ciao!
 
 O partigiano, portami via,
 
@@ -25,7 +25,7 @@ ché mi sento di morir.
 \zs
 E se io muoio da partigiano,
 
-o bella, ciao! bella, ciao! bella, ciao, ciao, ciao!
+o bella, ciao! Bella, ciao! Bella, ciao, ciao, ciao!
 
 E se io muoio da partigiano,
 
@@ -35,7 +35,7 @@ tu mi devi seppellir.
 \zs
 E seppellire lassù in montagna,
 
-o bella, ciao! bella, ciao! bella, ciao, ciao, ciao!
+o bella, ciao! Bella, ciao! Bella, ciao, ciao, ciao!
 
 E seppellire lassù in montagna,
 
@@ -45,17 +45,17 @@ sotto l'ombra di un bel fior.
 \zs
 Tutte le genti che passeranno,
 
-o bella, ciao! bella, ciao! bella, ciao, ciao, ciao!
+o bella, ciao! Bella, ciao! Bella, ciao, ciao, ciao!
 
 Tutte le genti che passeranno,
 
-Mi diranno «Che bel fior!»
+Mi diranno: «Che bel fior!»
 \ks
 
 \zs
 È questo il fiore del partigiano,
 
-o bella, ciao! bella, ciao! bella, ciao, ciao, ciao!
+o bella, ciao! Bella, ciao! Bella, ciao, ciao, ciao!
 
 È questo /: il fiore del partigiano, morto per la libertà! :/
 
