--- a/tp-songs/02_pop_rock/Yvonne_Přenosilová____Sklípek.tex
+++ b/tp-songs/02_pop_rock/Yvonne_Přenosilová____Sklípek.tex
@@ -3,41 +3,25 @@
 \zp{Sklípek}{Yvonne Přenosilová}
 
 \zs
-\Ch{Gm}{Půjdem} spolu do sklípku
+\Ch{Gmi}{Půjdem} spolu do sklípku,
 
-sedneme si v koutku, kde je \Ch{D7}{stín}
+sedneme si v koutku, kde je \Ch{D7}{stín,}
 
-\Ch{Gm}{vlídný} stín.
+vlídný \Ch{Gmi}{stín.}
 \ks
 
 \zs
 Dáme si pár polibků
 
-vedle bodrých soudků plných \Ch{D7}{vín}
+vedle bodrých soudků plných vín,
 
-\Ch{Gm}{dobrých} vín.
+dobrých vín.
 \ks
 
 \zr
-\Ch{B}{Rudou} lásku budem spolu \Ch{F}{pít} ~ \Ch{D}{~}
+\Ch{B}{Rudou} lásku budem spolu \Ch{F}{pít,} \Ch{D}{}
 
-\Ch{Gm}{vinný} sklep ti zrychlí tep a \Ch{A7}{zas} mě budeš cht\Ch{D7}{ít.}
-\kr
-
-\zs
-Já jsem slabá na tvůj chlad
-
-tak tě musí víno rozehřát
-
-rozehřát.
-\ks
-
-2x
-\zs
-La la la la lalala ....
-\ks
-
-\zr
+\Ch{Gmi}{vinný} sklep ti zrychlí tep a \Ch{A7}{zas mě} budeš \Ch{D7}{chtít.}
 \kr
 
 \zs
@@ -49,10 +33,22 @@ hořících.
 \ks
 
 \zs
-La la la la lalala ....
+2× La la la la lalala ....
 \ks
+
+\zr
+\kr
+
 \zs
-La la la la lalala ....
+Já jsem slabá na tvůj chlad,
+
+tak tě musí víno rozehřát,
+
+rozehřát.
+\ks
+
+\zs
+2× La la la la lalala ....
 \ks
 
 \zr
