--- a/tp-songs/04_tp/Kristý____Bohyně_ve_vaně.tex
+++ b/tp-songs/04_tp/Kristý____Bohyně_ve_vaně.tex
@@ -1,6 +1,6 @@
 % -*-coding: utf-8 -*-
 
-\zp{Bohyně ve vaně}{Kristy}
+\zp{Bohyně ve vaně}{Kristýna \uv{Kristý} Zíková}
 
 \zs
 Nejprve teplotu okusím ručkou svou,
@@ -15,7 +15,7 @@ chystám se užít si svůj vodní slovosled.
 \zs
 Jaká to nádhera -- ta koupel voňavá,
 
-vodou se prohaním jak rybka zlatavá,
+vodou se proháním jak rybka zlatavá,
 
 rukama objímám své tělo toužící,
 
