--- a/tp-songs/01_folk/Jarek_Nohavica____Sarajevo.tex
+++ b/tp-songs/01_folk/Jarek_Nohavica____Sarajevo.tex
@@ -3,22 +3,24 @@
 \zp{Sarajevo}{Jarek Nohavica}
 
 \zs
-\Ch{Emi}{Přes} haličské pláně \Ch{Ami}{vane ví}tr zlý,
+\Ch{Ami}{Přes} haličské pláně \Ch{Dmi}{vane ví}tr zlý,
 
-to \Ch{H7}{málo,} co jsme měli, nám \Ch{Emi}{vody} sebraly
+to \Ch{E7}{málo,} co jsme měli, nám \Ch{Ami}{vody} sebraly
 
-jako tažní ptáci, \Ch{Ami}{jako ror}ýsi
+jako tažní ptáci, \Ch{Dmi}{jako ror}ýsi
 
-\Ch{H7}{letí}me nad zemí, dva \Ch{Emi}{modré} dopisy.
+\Ch{E7}{letí}me nad zemí, dva \Ch{Ami}{modré} dopisy.
 \ks
 
 
 \zr
-\Ch{Emi}{Ještě} hoří oheň a \Ch{Ami}{praská} dřevo,
+\Ch{Ami}{Ještě} hoří oheň a \Ch{Dmi}{praská} dřevo,
 
-\Ch{D7}{ale už} je čas jít \Ch{G}{spá}t, \Ch{H7}{} \Ch{Emi}{tamhle} za kopcem je \Ch{Ami}{Saraj}evo,
+\Ch{G7}{ale už} je čas jít \Ch{C}{spát,} \Ch{E7}{}
 
-tam \Ch{H7}{budeme} se zítra ráno \Ch{Emi}{brát.}
+\Ch{Ami}{tamhle} za kopcem je \Ch{Dmi}{Sarajevo,}
+
+tam \Ch{E7}{budeme} se zítra ráno \Ch{Ami}{brát.}
 \kr
 
 \zs
