--- a/tp-songs/01_folk/Pacifik____Velrybářská_výprava.tex
+++ b/tp-songs/01_folk/Pacifik____Velrybářská_výprava.tex
@@ -42,8 +42,8 @@ v tomhle kraji beztak nemáš žádnou legraci.
 Když jsme domů připluli, už psal se příští rok,
 starej rejdař povídá, že nedá ani flok:
 
-"Místo velryb v Grónským moři zajímal vás grog,
-tuhle práci zaplatil by asi jenom cvok."
+\uv{Místo velryb v Grónským moři zajímal vás grog,
+tuhle práci zaplatil by asi jenom cvok.}
 \ks
 
 \zr  \kr
