Repetice u Hrnecku na 1 radek

--- a/tp-songs/01_folk/Samson_a_jeho_parta____Hrneček.tex
+++ b/tp-songs/01_folk/Samson_a_jeho_parta____Hrneček.tex
@@ -56,8 +56,9 @@ a ať mám hodnýho mužskýho.
 Ať se mi zadaří a ať mě nemlátí,
 ať ten lógr už svět v koláč obrátí.
 
+% mezery u repetice nejsou kvuli tomu, aby se radek nerozpadl na dva
 Ať mi v něm dopřeje mandle a hrozinky,
-/: prosím tě, uděj se, štěstíčko malinký. :/
+/:prosím tě, uděj se, štěstíčko malinký.:/
 \ks
 
 \kp
