Vlasta Redl -> lidová

--- a/tp-songs/01_folk/lidová____A_te_Rehradice.tex
+++ b/tp-songs/01_folk/lidová____A_te_Rehradice.tex
@@ -1,6 +1,6 @@
 % -*-coding: utf-8 -*-
 
-\zp{A te Rehradice}{Vlasta Redl}
+\zp{A te Rehradice}{(lidová)}
 
 \zs
 \Ch{Dmi}{A te} Rehradice, \Ch{C}{na} pěkný \Ch{F}{rovině},
