--- a/tp-songs/03_zahranicni/Norah_Jones____Dont_Know_Why.tex
+++ b/tp-songs/03_zahranicni/Norah_Jones____Dont_Know_Why.tex
@@ -1,8 +1,6 @@
 \zp{Don't know why}{Norah Jones} 
 
-\zs
-Intro: \Ch{Bbmaj7}{}  \Ch{Bb7}{}  \Ch{Eb}{}  \Ch{D}{}  \Ch{Gmi7}{}  \Ch{C7}{}
-\ks
+\Ch{Bbmaj7}{}  \Ch{Bb7}{}  \Ch{Eb}{}  \Ch{D}{}  \Ch{Gmi7}{}  \Ch{C7}{}
 
 \zs
 \Ch{Bbmaj7}{I waited} \Ch{Bb7}{'til I saw} the \Ch{Ebmaj7}{sun} \Ch{D+}{}
@@ -48,7 +46,7 @@ Driving down the road alone
 \kr
 
 \zs
-Sólo
+(sólo)
 \ks
 
 \zs
