--- a/tp-songs/03_zahranicni/Proclaimers____500_miles.tex
+++ b/tp-songs/03_zahranicni/Proclaimers____500_miles.tex
@@ -1,6 +1,6 @@
 % -*-coding: utf-8 -*-
 
-\zp{500 miles}{Proclaimers}
+\zp{500 miles}{The Proclaimers}
 
 \zs
 When I \Ch{E}{wake} up, well I know I'm gonna be
