--- a/tp-songs/01_folk/Vlasta_Redl____Sbohem_galánečko.tex
+++ b/tp-songs/01_folk/Vlasta_Redl____Sbohem_galánečko.tex
@@ -1,6 +1,6 @@
 % -*-coding: utf-8 -*-
 
-\zp{Sbohem galánečko}{Vlasta Redl}
+\zp{Sbohem, galánečko}{Vlasta Redl}
 
 \zs
 \Ch{G}{Sbohem,} galá\Ch{Emi}{nečko,}
