--- a/tp-songs/01_folk/Hoboes____Bedna_od_whisky.tex
+++ b/tp-songs/01_folk/Hoboes____Bedna_od_whisky.tex
@@ -1,6 +1,6 @@
 % -*-coding: utf-8 -*-
 
-\zp{Bedna od whisky}{Miki Ryvola}
+\zp{Bedna od whisky}{Hoboes}
 \zs
 \Ch{Ami}{Dneska} už mi \Ch{C}{fóry} ňák \Ch{Ami}{nejdou} přes \Ch{E7}{pysky,}
 
