--- a/tp-songs/01_folk/Hoboes____Tak_už_mi_má_holka_mává.tex
+++ b/tp-songs/01_folk/Hoboes____Tak_už_mi_má_holka_mává.tex
@@ -1,6 +1,6 @@
 % -*-coding: utf-8 -*-
 
-\zp{Tak už mi má holka mává}{Wabi Ryvola}
+\zp{Tak už mi má holka mává}{Hoboes}
 
 \zs
 \Ch{Emi}{Posledních} \Ch{D}{pár} minut \Ch{C}{zbejvá} \Ch{Emi}{jen,}
