--- a/tp-songs/01_folk/Hoboes____Tereza.tex
+++ b/tp-songs/01_folk/Hoboes____Tereza.tex
@@ -1,6 +1,6 @@
 % -*-coding: utf-8 -*-
 
-\zp{Tereza}{Wabi Ryvola}
+\zp{Tereza}{Hoboes}
 
 \zs
 Ten \Ch{C}{den,} co vítr \Ch{D}{listí} z města \Ch{G}{svál,}
