--- a/tp-songs/01_folk/Čechomor____Proměny.tex
+++ b/tp-songs/01_folk/Čechomor____Proměny.tex
@@ -3,52 +3,41 @@
 \zp{Proměny}{Čechomor}
 
 \zs
-\Ch{Ami}{Darmo} sa ty trápíš, \Ch{G}{můj} milý sy\Ch{C}{nečku},
+\Ch{Ami}{Darmo} sa ty trápíš \Ch{G}{můj} milý sy\Ch{C}{nečku}, nenosím já tebe \Ch{Dmi}{nenosím} v sr\Ch{Ami}{déčku}
 
-nenosím já tebe, \Ch{Dmi}{nenosím} v sr\Ch{Ami}{déčku.}
-
-A já tvo\Ch{G}{ja} \Ch{C}{ne}\Ch{G}{bu}\Ch{C}{du}
-\Ch{Dmi}{ani je}dnu \Ch{E}{hodi}\Ch{Ami}{nu.}
+A já tvo\Ch{G}{ja} \Ch{C}{ne}\Ch{G}{bu}\Ch{C}{du} \Ch{Dmi}{ani je}dnu \Ch{E}{hodi}\Ch{Ami}{nu}
 \ks
 
 \zs
-Copak sobě myslíš, má milá panenko?
+Copak sobě myslíš má milá panenko, vždyť ty si to moje rozmilé srdénko
 
-Vždyť ty si to moje rozmilé srdénko.
-
-A ty musíš býti má, lebo mi tě Pán Bůh dá.
+A ty musíš býti má lebo mi tě Pán Bůh dá
 \ks
 
 \zs
-A já sa udělám malú veverečkú
+A já sa udělám malú veverečkú, a uskočím tobě z dubu na jedličku
 
-a uskočím tobě z dubu na jedličku.
-
-Přece tvoja nebudu ani jednu hodinu.
+Přece tvoja nebudu ani jednu hodinu
 \ks
 
 \zs
-A já chovám doma takú sekérečku,
+A já chovám doma takú sekérečku, ona mi podetne dúbek i jedličku
 
-ona mi podetne dúbek i jedličku.
-
-A ty musíš býti má, lebo mi tě Pán Bůh dá.
+A ty musíš býti má lebo mi tě Pán Bůh dá
 \ks
 
 \zs
 A já sa udělám tú malú rybičkú,
+a já ti uplynu preč po Dunajíčku
 
-a já ti uplynu preč po Dunajíčku.
-
-Přece tvoja nebudu ani jednu hodinu.
+Přece tvoja nebudu ani jednu hodinu
 \ks
 
 \zs
 A já chovám doma takovú udičku,
+co na ni ulovím kdejakú rybičku
 
-co na ni ulovím kdejakú rybičku.
-
-A ty přece budeš má, lebo mi tě Pán Bůh dá.
+A ty přece budeš má lebo mi tě Pán Bůh dá
 \ks
 
 \zr
@@ -56,35 +45,31 @@ A ty přece budeš má, lebo mi tě Pán Bůh dá.
 \kr
 
 \zs
-A já sa udělám tú velikú vranú
+A já sa udělám tú velikú vranú,
+a já ti uletím na uherskú stranu
 
-a já ti uletím na uherskú stranu.
-
-Přece tvoja nebudu ani jednu hodinu.
+Přece tvoja nebudu ani jednu hodinu
 \ks
 
 \zs
 A já chovám doma starodávnú kušu,
+co ona vystřelí všeckým vranám dušu
 
-co ona vystřelí všeckým vranám dušu.
-
-A ty musíš býti má, lebo mi tě Pán Bůh dá.
+A ty musíš býti má lebo mi tě Pán Bůh dá
 \ks
 
 \zs
-A já sa udělám hvězdičkú na nebi
+A já sa udělám hvězdičkú na nebi,
+a já budu lidem svítiti na nebi
 
-a já budu lidem svítiti na nebi.
-
-Přece tvoja nebudu ani jednu hodinu.
+Přece tvoja nebudu ani jednu hodinu
 \ks
 
 \zs
 A sú u nás doma takoví hvězdáři,
+co vypočítajú hvězdičky na nebi
 
-co vypočítajú hvězdičky na nebi.
-
-A ty musíš býti má, lebo mi tě Pán Bůh dá
+A ty musíš býti má lebo mi tě Pán Bůh dá
 \ks
 
 \zr
