Možnost překladu not pomocí lilypond-book (fixes #38)
options = [ "MUSIC" ] zapne překlad not pomocí lilypond-book. Jestliže program
není nainstalovaný, Snakemake to hned ze začátku oznámí a skončí. V případě
absence MUSIC se bloky lilypond ignorují. Překlad probíhá u souborů, které mají
příponu lytex.

Ve Snakemake.test je příklad. K "Love me do" jsem pokusně přidal noty C-D-E.
Překlad ostatních zpěvníků to neovlivní. Postupem času se může nahradit
nějakým smysluplnějším příkladem.

--- a/tpcb/template.tex
+++ b/tpcb/template.tex
@@ -15,6 +15,7 @@
 \usepackage[chordbk]{songbook}
 \usepackage[xetex,pdfpagelabels=false,pdfborder={0 0 0}]{hyperref}
 \usepackage{forloop}
+\usepackage{verbatim}
 
 \unless\ifdefined\SINGLE
   \newindex[cisloPisne]{default}{idx_pisne}{ind_pisne}{Rejstřík písní}
@@ -113,6 +114,8 @@
 }
 
 \newcommand\emptyPage{\shipout\vbox to \vsize{\hbox to \hsize{\hss}\vss}\stepcounter{page}}
+
+\newenvironment{lilypond}{\comment}{\endcomment} % Ignorovat lilypond, pokud zbude v .tex
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
