--- a/tp-songs/01_folk/Fešáci____Jaro.tex
+++ b/tp-songs/01_folk/Fešáci____Jaro.tex
@@ -2,7 +2,7 @@
 
 \zp{Jaro}{Fešáci}
 \zs
-\Ch{Ami}{My} čekali \Ch{C}{jaro} a \Ch{G}{zatím} přišel \Ch{Ami}{mráz},
+\Ch{Ami}{My} čekali \Ch{C}{jaro} a \Ch{G}{zatím} přišel \Ch{Ami}{mráz,}
 tak strašlivou \Ch{C}{zimu} ne\Ch{G}{zažil} nikdo z \Ch{Ami}{nás,}
 
 z těžkých černých \Ch{C}{mraků} se \Ch{G}{stále} sypal \Ch{Ami}{sníh}
