--- a/tp-songs/01_folk/Jarek_Nohavica____Danse_Macabre.tex
+++ b/tp-songs/01_folk/Jarek_Nohavica____Danse_Macabre.tex
@@ -1,6 +1,6 @@
 % -*-coding: utf-8 -*-
 
-\zp{Danse Macbre}{Jarek Nohavica}
+\zp{Danse Macabre}{Jarek Nohavica}
 \zr
 
 \Ch{Dmi}{Naj} \Ch{B}{na} na \Ch{Dmi}{naj} \Ch{B}{na} na \Ch{Dmi}{naj...  
