--- a/tp-songs/02_pop_rock/Karel_Zich____Alenka_v_říši_divů.tex
+++ b/tp-songs/02_pop_rock/Karel_Zich____Alenka_v_říši_divů.tex
@@ -3,11 +3,11 @@
 \zp{Alenka v říši divů}{Karel Zich}
   \zs
 
-Tele\Ch{G}{gram} s adresou \Ch{C}{svět}, píšu v něm pět vlí\Ch{D}{dných} 
-\Ch{G}{vět} \Ch{D}{} jedné dívce.
+\Ch{G}{Telegram} s adresou svět, \Ch{C}{píšu v něm} pět vlídných 
+\Ch{D}{} jedné \Ch{G}{dívce.} \Ch{D}{}
 
-K\Ch{G}{dopak} ví, kam jej zítra pošta do\Ch{C}{ručí} a kolik náhod mu poručí?  
-\Ch{D}{Chtěl} bych jen vidět zář očí, \Ch{G}{které} budo\Ch{D}{u} jej číst. 
+\Ch{G}{Kdopak} ví, kam jej zítra pošta doručí \Ch{C}{a kolik} náhod mu poručí?  
+\Ch{D}{Chtěl} bych jen vidět zář očí, které \Ch{G}{budou} jej číst. \Ch{D}
 
 \ks
 \zr
